Test inherited property inclusion